--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -358,3 +358,5 @@ workflows:
               only: [deploy-phase]
       - deploy-frontend:
           requires: [run-migrations]              
+      - deploy-backend:
+          requires: [run-migrations]      
