--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -346,19 +346,19 @@ workflows:
       #    requires: [build-backend] 
       #- scan-frontend:
       #    requires: [build-frontend]
-      - deploy-infrastructure
+      #- deploy-infrastructure
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #    filters:
       #      branches:
       #        only: [deploy-infrastructure]
-      - configure-infrastructure:
+      #- configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]          
           filters:
             branches:
               only: [deploy-phase]
-      - deploy-frontend:
-          requires: [run-migrations]              
+      #- deploy-frontend:
+      #    requires: [run-migrations]              
       - deploy-backend:
           requires: [run-migrations]      
