--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -352,7 +352,7 @@ workflows:
       #      branches:
       #        only: [deploy-infrastructure]
       #- configure-infrastructure:
-          requires: [deploy-infrastructure]
+      #    requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]          
           filters:
