--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -354,7 +354,7 @@ workflows:
       #- configure-infrastructure:
       #    requires: [deploy-infrastructure]
       - run-migrations:
-          requires: [configure-infrastructure]          
+      #    requires: [configure-infrastructure]          
           filters:
             branches:
               only: [deploy-phase]
