--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,7 +324,8 @@ jobs:
             cat .env
             npm i
             npm run build
-            ls dist
+            cp -R dist/.* .circleci/ansible/deploy/files/
+            ls .circleci/ansible/deploy/files/
       - run:
           name: Deploy backend
           command: |
