--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,8 +324,8 @@ jobs:
             cat .env
             npm i
             npm run build
-            cp -R dist/.* /.circleci/ansible/deploy/files/
-            ls .circleci/ansible/deploy/files/
+            cp -R dist/.* ./.circleci/ansible/deploy/files/
+            ls ./.circleci/ansible/deploy/files/
       - run:
           name: Deploy backend
           command: |
