--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,11 +311,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            #apt-get update
-            #apt-get install -yy less python3 
-            #curl https://bootstrap.pypa.io/pip/3.5/get-pip.py -o get-pip.py
-            #python3 get-pip.py --user
-            #python3 -m pip install --user ansible
+            apt-get update
+            apt-get install -yy less python3 
+            curl https://bootstrap.pypa.io/pip/3.5/get-pip.py -o get-pip.py
+            python3 get-pip.py --user
+            python3 -m pip install --user ansible
       - run:
           name: prepare for deploy
           command: |
@@ -326,12 +326,13 @@ jobs:
             npm run build
             cp -R dist/* ../.circleci/ansible/roles/deploy/files/
             ls ../.circleci/ansible/roles/deploy//files/
-
       - run:
           name: Deploy backend
+          environment:
+            ANSIBLE_HOST_KEY_CHECKING: False          
           command: |
-            # your code here
-
+            cd .circleci/ansible 
+            ansible-playbook deploy-backend.yml -i ~/inventory.txt
       - destroy-environment
 
 workflows:
@@ -347,15 +348,15 @@ workflows:
       #    requires: [build-backend] 
       #- scan-frontend:
       #    requires: [build-frontend]
-      #- deploy-infrastructure
+      - deploy-infrastructure
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #    filters:
       #      branches:
       #        only: [deploy-infrastructure]
-      #- configure-infrastructure:
-      #    requires: [deploy-infrastructure]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
       - run-migrations:
-      #    requires: [configure-infrastructure]          
+          requires: [configure-infrastructure]          
           filters:
             branches:
               only: [deploy-phase]
