--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,6 +316,7 @@ jobs:
             curl https://bootstrap.pypa.io/pip/3.5/get-pip.py -o get-pip.py
             python3 get-pip.py --user
             python3 -m pip install --user ansible
+            ansible --help
       - run:
           name: prepare for deploy
           command: |
@@ -348,15 +349,15 @@ workflows:
       #    requires: [build-backend] 
       #- scan-frontend:
       #    requires: [build-frontend]
-      - deploy-infrastructure
+      #- deploy-infrastructure
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #    filters:
       #      branches:
       #        only: [deploy-infrastructure]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
+      #- configure-infrastructure:
+      #    requires: [deploy-infrastructure]
       - run-migrations:
-          requires: [configure-infrastructure]          
+      #    requires: [configure-infrastructure]          
           filters:
             branches:
               only: [deploy-phase]
