--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -349,15 +349,15 @@ workflows:
       #    requires: [build-backend] 
       #- scan-frontend:
       #    requires: [build-frontend]
-      #- deploy-infrastructure
+      - deploy-infrastructure
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #    filters:
       #      branches:
       #        only: [deploy-infrastructure]
-      #- configure-infrastructure:
-      #    requires: [deploy-infrastructure]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
       - run-migrations:
-      #    requires: [configure-infrastructure]          
+          requires: [configure-infrastructure]          
           filters:
             branches:
               only: [deploy-phase]
