--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: Copy Files
   template:
-    src: "deploy/files/*"
+    src: "deploy/files/"
     dest: "~/web/"
 
 - name: Executing node
