--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -4,13 +4,13 @@
     path: ~/web
     state: directory
 
-- name: Copy Files
-  shell: |
-    ls /root/project/.circleci/ansible/roles/deploy
-  template:
-    src: "files/"
-    dest: "~/web/"
+#- name: Copy Files
+#  shell: |
+#    ls /root/project/.circleci/ansible/roles/deploy
+#  template:
+#    src: "files/"
+#    dest: "~/web/"
 
-- name: Executing node
-  shell: |
-    pm2 start ~/web/main.js -f
+#- name: Executing node
+#  shell: |
+#    pm2 start ~/web/main.js -f
