--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -326,15 +326,16 @@ jobs:
             npm i
             npm run build
             cp -R dist/* ../.circleci/ansible/roles/deploy/files/
-            ls ../.circleci/ansible/roles/deploy//files/
+            ls ../.circleci/ansible/roles/deploy/files/
       - run:
           name: Deploy backend
           environment:
             ANSIBLE_HOST_KEY_CHECKING: False          
           command: |
+            echo "54.189.139.18" >> inventory.txt
             cd .circleci/ansible 
-            ansible-playbook deploy-backend.yml -i ~/inventory.txt
-      - destroy-environment
+            ansible-playbook deploy-backend.yml -i inventory.txt
+      #- destroy-environment
 
 workflows:
   default:
@@ -349,18 +350,18 @@ workflows:
       #    requires: [build-backend] 
       #- scan-frontend:
       #    requires: [build-frontend]
-      - deploy-infrastructure
+      #- deploy-infrastructure
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #    filters:
       #      branches:
       #        only: [deploy-infrastructure]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]          
-          filters:
-            branches:
-              only: [deploy-phase]
+      #- configure-infrastructure:
+      #    requires: [deploy-infrastructure]
+      #- run-migrations:
+      #    requires: [configure-infrastructure]          
+      #    filters:
+      #      branches:
+      #        only: [deploy-phase]
       #- deploy-frontend:
       #    requires: [run-migrations]              
       - deploy-backend:
