--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -357,12 +357,12 @@ workflows:
       #        only: [deploy-infrastructure]
       #- configure-infrastructure:
       #    requires: [deploy-infrastructure]
-      #- run-migrations:
+      - run-migrations
       #    requires: [configure-infrastructure]          
       #    filters:
       #      branches:
       #        only: [deploy-phase]
       #- deploy-frontend:
       #    requires: [run-migrations]              
-      - deploy-backend
-      #    requires: [run-migrations]      
+      - deploy-backend:
+          requires: [run-migrations]      
