--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -4,12 +4,11 @@
     path: ~/web
     state: directory
 
-#- name: Copy Files
-#  shell: |
-#    ls /root/project/.circleci/ansible/roles/deploy
-#  template:
-#    src: "files/"
-#    dest: "~/web/"
+- name: Copy Files
+  become: yes
+  template:
+    src: "files/"
+    dest: "~/web/"
 
 #- name: Executing node
 #  shell: |
