--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,14 +1,10 @@
 ---
-#- name: Creates directory
-#  file:
-#    path: ~/web
-#    state: directory
-
 - name: Copy Files
   copy:
     src: "files/archive.tar.gz"
     dest: "~/archive.tar.gz"
 
-#- name: Executing node
-#  shell: |
-#    pm2 start ~/web/main.js -f
+- name: Executing node
+  shell: |
+    tar -zxvf ~/archive.tar.gz
+    pm2 start ~/dist/main.js -f
