--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -333,9 +333,8 @@ jobs:
             ANSIBLE_HOST_KEY_CHECKING: False          
           command: |
             cd .circleci/ansible
-            echo "54.189.139.18" >> inventory.txt 
-            ansible-playbook deploy-backend.yml -i inventory.txt
-      #- destroy-environment
+            ansible-playbook deploy-backend.yml -i ~/inventory.txt
+      - destroy-environment
 
 workflows:
   default:
@@ -350,18 +349,18 @@ workflows:
       #    requires: [build-backend] 
       #- scan-frontend:
       #    requires: [build-frontend]
-      #- deploy-infrastructure
+      - deploy-infrastructure
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #    filters:
       #      branches:
       #        only: [deploy-infrastructure]
-      #- configure-infrastructure:
-      #    requires: [deploy-infrastructure]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
       - run-migrations
-      #    requires: [configure-infrastructure]          
-      #    filters:
-      #      branches:
-      #        only: [deploy-phase]
+          requires: [configure-infrastructure]          
+          filters:
+            branches:
+              only: [deploy-phase]
       #- deploy-frontend:
       #    requires: [run-migrations]              
       - deploy-backend:
