--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -356,7 +356,7 @@ workflows:
       #        only: [deploy-infrastructure]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      - run-migrations
+      - run-migrations:
           requires: [configure-infrastructure]          
           filters:
             branches:
@@ -364,4 +364,5 @@ workflows:
       #- deploy-frontend:
       #    requires: [run-migrations]              
       - deploy-backend:
-          requires: [run-migrations]      
+          requires: [run-migrations]
+                
