--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -336,6 +336,36 @@ jobs:
             ansible-playbook deploy-backend.yml -i ~/inventory.txt
       - destroy-environment
 
+  smoke-test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update curl
+      - run:
+          name: Backend smoke test.
+          command: |
+            BACKEND_IP=`aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text`
+
+            curl https://${BACKEND_IP}:3030/api/status  
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-east-1.amazonaws.com"            
+
+            if curl -s ${URL} | grep "Welcome"
+            then
+            return 1
+            else
+            return 0
+            fi
+      - destroy-environment
+
 workflows:
   default:
     jobs:   
@@ -358,11 +388,12 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]          
-          filters:
-            branches:
-              only: [deploy-phase]
-      #- deploy-frontend:
-      #    requires: [run-migrations]              
+      - deploy-frontend:
+          requires: [run-migrations]              
       - deploy-backend:
           requires: [run-migrations]
-                
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
+          filters:
+            branches:
+              only: [smoke-test]                
