--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -338,13 +338,13 @@ jobs:
 
   smoke-test:
     docker:
-      - image: alpine:latest
+      - image: amazon/aws-cli
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            apk add --update curl
+            yum -y install curl
       - run:
           name: Backend smoke test.
           command: |
@@ -356,7 +356,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-east-1.amazonaws.com"            
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-west-2.amazonaws.com"            
 
             if curl -s ${URL} | grep "Welcome"
             then
