--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -365,7 +365,7 @@ jobs:
             else
             return 0
             fi
-      - destroy-environment
+      #- destroy-environment
 
 workflows:
   default:
@@ -389,12 +389,12 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]          
-      - deploy-frontend:
-          requires: [run-migrations]              
+      #- deploy-frontend:
+      #    requires: [run-migrations]              
       - deploy-backend:
           requires: [run-migrations]
       - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
+      #    requires: [deploy-backend, deploy-frontend]
           filters:
             branches:
               only: [smoke-test]                
