--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -394,7 +394,7 @@ workflows:
       - deploy-backend:
           requires: [run-migrations]
       - smoke-test:
-      #    requires: [deploy-backend, deploy-frontend]
+          requires: [deploy-backend]
           filters:
             branches:
               only: [smoke-test]                
