--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -357,15 +357,15 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-west-2.amazonaws.com"            
+            #URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-west-2.amazonaws.com"            
 
-            if curl -s ${URL} | grep "Welcome"
-            then
-            return 1
-            else
-            return 0
-            fi
-      #- destroy-environment
+            #if curl -s ${URL} | grep "Welcome"
+            #then
+            #return 1
+            #else
+            #return 0
+            #fi
+      - destroy-environment
 
 workflows:
   default:
