--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = `curl -H "token: 84c5d1b7-bf5a-4e4b-86ab-62b35d9d7ec5" --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}`
+            SUCCESS=`curl -H "token: 84c5d1b7-bf5a-4e4b-86ab-62b35d9d7ec5" --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}`
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -265,6 +265,7 @@ jobs:
           paths:
             - .env
       - destroy-environment
+      - revert-migrations
 
   deploy-frontend:
     docker:
@@ -296,7 +297,8 @@ jobs:
             aws s3 cp ./dist s3://udapeople-${CIRCLE_WORKFLOW_ID}/ --recursive
             
       - destroy-environment
-
+      - revert-migrations
+      
   deploy-backend:
     docker:
       - image: sleavely/node-awscli:14.x
@@ -334,6 +336,7 @@ jobs:
             cd .circleci/ansible
             ansible-playbook deploy-backend.yml -i ~/inventory.txt
       - destroy-environment
+      - revert-migrations
 
   smoke-test:
     docker:
@@ -359,9 +362,9 @@ jobs:
 
             if curl -s ${URL} | grep "Welcome"
             then
-            return 1
+              return 1
             else
-            return 0
+              return 0
             fi
       - destroy-environment
       - revert-migrations
@@ -393,7 +396,7 @@ workflows:
       - deploy-backend:
           requires: [run-migrations]
       - smoke-test:
-          requires: [deploy-backend]
+          requires: [deploy-frontend,deploy-backend]
           filters:
             branches:
               only: [smoke-test]                
