--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -298,7 +298,7 @@ jobs:
             
       - destroy-environment
       - revert-migrations
-      
+
   deploy-backend:
     docker:
       - image: sleavely/node-awscli:14.x
@@ -358,13 +358,11 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-west-2.amazonaws.com"            
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-west-2.amazonaws.com/index.html"            
 
             if curl -s ${URL} | grep "Welcome"
             then
-              return 1
-            else
-              return 0
+              echo "Welcome"
             fi
       - destroy-environment
       - revert-migrations
