--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,7 +137,6 @@ jobs:
           command: |
             cd backend
             npm audit --audit-level=critical
-
   
   deploy-infrastructure:
     docker:
@@ -367,34 +366,65 @@ jobs:
       - destroy-environment
       - revert-migrations
 
+  cloudfront-update:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: amazon/aws-cli
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum -y install tar gzip curl
+            # your code here
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            export OldWorkflowID=$(aws cloudformation \
+            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            
+            echo "OldWorkflowID = $OldWorkflowID"
+            
+            aws cloudformation deploy \
+              --template-file .circleci/files/cloudfront.yml \
+              --tags project=udapeople \
+              --stack-name "udapeople-cloudfront-${CIRCLE_WORKFLOW_ID}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"
+      - destroy-environment
+      - revert-migrations              
+
 workflows:
   default:
     jobs:   
-      #- build-frontend
-      #- build-backend
-      #- test-frontend:
-      #    requires: [build-frontend]
-      #- test-backend:
-      #    requires: [build-backend]
-      #- scan-backend:
-      #    requires: [build-backend] 
-      #- scan-frontend:
-      #    requires: [build-frontend]
-      - deploy-infrastructure
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend] 
+      - scan-frontend:
+          requires: [build-frontend]
+      #- deploy-infrastructure
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #    filters:
       #      branches:
       #        only: [deploy-infrastructure]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]          
-      - deploy-frontend:
-          requires: [run-migrations]              
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-frontend,deploy-backend]
-          filters:
-            branches:
-              only: [smoke-test]                
+      #- configure-infrastructure:
+      #    requires: [deploy-infrastructure]
+      #- run-migrations:
+      #    requires: [configure-infrastructure]          
+      #- deploy-frontend:
+      #    requires: [run-migrations]              
+      #- deploy-backend:
+      #    requires: [run-migrations]
+      #- smoke-test:
+      #    requires: [deploy-frontend,deploy-backend]
+      #- cloudfront-update:
+      #    requires: [smoke-test]
+      #    filters:
+      #      branches:
+      #        only: [promotion-phase]          
