--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -368,10 +368,8 @@ jobs:
 
   cloudfront-update:
     docker:
-      # Docker image here that supports AWS CLI
       - image: amazon/aws-cli
     steps:
-      # Checkout code from git
       - checkout
       - run:
           name: Install dependencies
@@ -386,6 +384,10 @@ jobs:
             --no-paginate --output text)
             
             echo "OldWorkflowID = $OldWorkflowID"
+
+            curl -H "Content-Type: text/plain" \
+            -H "token: 5ced8931-cebd-490b-b6f8-ee9afb282677" \
+            --request PUT --data "$OldWorkflowID" https://api.memstash.io/values/OldWorkflowID            
             
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
@@ -408,23 +410,20 @@ workflows:
           requires: [build-backend] 
       - scan-frontend:
           requires: [build-frontend]
-      #- deploy-infrastructure
-      #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #    filters:
-      #      branches:
-      #        only: [deploy-infrastructure]
-      #- configure-infrastructure:
-      #    requires: [deploy-infrastructure]
-      #- run-migrations:
-      #    requires: [configure-infrastructure]          
-      #- deploy-frontend:
-      #    requires: [run-migrations]              
-      #- deploy-backend:
-      #    requires: [run-migrations]
-      #- smoke-test:
-      #    requires: [deploy-frontend,deploy-backend]
-      #- cloudfront-update:
-      #    requires: [smoke-test]
-      #    filters:
-      #      branches:
-      #        only: [promotion-phase]          
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]          
+      - deploy-frontend:
+          requires: [run-migrations]              
+      - deploy-backend:
+          requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-frontend,deploy-backend]
+      - cloudfront-update:
+          requires: [smoke-test]
+          filters:
+            branches:
+              only: [promotion-phase]          
