--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,7 +342,7 @@ jobs:
              cd .circleci/ansible
              aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text >> inventory.txt
+              --filters "Name=tag:project,Values=udapeople" --output text >> inventory.txt
              ansible-playbook configure-prometheus.yml -i inventory.txt         
       #- destroy-environment
       #- revert-migrations
